@@ -222,3 +222,4 @@ UI_EN = {
 	UI_MoreTraits_Options_DrinkNotifier = "Alcoholism Reminder",
     UI_MoreTraits_Options_DrinkNotifier_ToolTip = "If you have the Alcoholic trait, and currently need alcohol, you will be reminded every in-game hour.",
 }
+
